# backend

./: .env.example  CACHING_GUIDE.md  README.md  alembic.ini  config.py  models.py  pyproject.toml  utils.py
app/: api.py  controller.py  exceptions.py  main.py  models.py  repositoires.py  repositories.py  schemas.py  services.py
database/: settings.py
database/alembic/: env.py
database/alembic/versions/: b897c53ea085_change_visualization_image_to_mediumblob.py  fcf80e5c7515_.py
outputs/: arctic_env_fields.npz  env_fields.npz  ncf_model_weights.pth
